   o Do we have a rule to style check for multiple declarations and chained
     assignments? (e.g. int a, b;  int a = b = x;)
   o Need to refactor the regression test packages to reflect new packaging.
   o Rework these packages to exist with the net.sourceforge.pmd.lang.* hierarchy:
        net.sourceforge.pmd.dfa
        net.sourceforge.pmd.symboltables
        net.sourceforge.pmd.typeresolution
        net.sourceforge.pmd.properties
   o Need a JUnit test to check for "dead" Rules, that is those not used by any RuleSet.
   o Rule JUnit tests should verify the Test class follows expected naming
     conventions just like the Rules need to.
   o Need to organize the ruleset XML files based upon Language.  Need to come
     up with a solution for the "rulesets.properties" files.
   o Need a more flexible and powerful scheme for classifying files to various
     Languages.  At a minimum, should have the ability to specify which
     file extensions you want to be used for a language (e.g. not everyone uses
     .jsp for JSP extensions, some use .jspx, .xhtml, etc.).  Also, consider
     hooks into the LanguageVersionDiscoverer process for classifying a
     File/String to a LanguageVersion of a specific Language, one could imaging
     using a 'magic' system like Unix uses to tell different versions of files
     apart based on actual content.
   o Some cleanup needs to be done on the PMD class.  There are 9! processFile(s)
     methods, and multiple places which deal with stateful operations
     (e.g. calling PMD.setExcludeMarker(), PMD.setClassLoader(), RuleSets.start()),
     further the Benchmarking stuff really only can work for commandline PMD
     usage, and the RuleSets.start()/end() stuff isn't working for all entry
     points into the PMD class.  Things need to be simplified and centralized.
     There should be a clear definition of a lifecycle/sequence of events for
     the PMD class, so  that various integration points (command line, Ant, IDEs)