@@ -1,7 +1,7 @@
 /**
  * BSD-style license; for more info see http://pmd.sourceforge.net/license.html
  */
-package net.sourceforge.pmd.typeresolution;
+package net.sourceforge.pmd.lang.java.typeresolution;
 
 import java.util.ArrayList;
 import java.util.Collections;
